Added About Me Section and updated colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   <h1>Please be patient, I'm still learning! WIP!</h1>
     <p>More to come soon!</p>
-
-
 </body>
+<!-- About Me Section -->
+<footer>
+    <h1 class="border"></h1>
+    <h3>About Me</h2>
+    <p>Email me at colinhoolwerf@gmail.com</p>
+    <a href="https://www.linkedin.com/in/colinhoolwerf/">LinkedIn</a>
+</footer>
 </HTML>
