added more color and refined exisiting colors

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <!-- Portfolio Body -->
 <body>
-  <h1>Please be patient, I'm still learning! WIP!</h1>
+    <h1>Please be patient, I'm still learning! WIP!</h1>
     <p>More to come soon!</p>
 </body>
 <!-- About Me Section -->
