--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <!-- Portfolio Body -->
 <body>
-    <h1>Please be patient, I'm still learning! WIP!</h1>
+    <div id="banner">
+        <div class="content">
+          <h1>Colin Hoolwerf</h1>
+        </div>
+    </div>
+    <h2>Please be patient, I'm still learning! WIP!</h1>
     <p>More to come soon!</p>
 </body>
 <!-- About Me Section -->
