fixed the styling of the banner

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   </head>
   <!-- Portfolio Body -->
 <body>
+<!-- Banner with Name and Tacoma -->
     <div id="banner">
         <div class="content">
           <h1>Colin Hoolwerf</h1>
         </div>
     </div>
-    <h2>Please be patient, I'm still learning! WIP!</h1>
-    <p>More to come soon!</p>
+    <h2>This is definitely still a work in progress!</h1>
+    <p>Please check again later!</p>
 </body>
 <!-- About Me Section -->
 <footer>
