removed name from banner

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
   <!-- Portfolio Body -->
 <body>
 <!-- Banner with Name and Tacoma -->
-    <div id="banner">
-        <div class="content">
-          <h1>Colin Hoolwerf</h1>
-        </div>
+    <div id="banner"></div>
     </div>
     <h2>This is definitely still a work in progress!</h1>
     <p>Please check again later!</p>
