changed banner to image inbed vs css inbed

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <!-- Portfolio Body -->
 <body>
-<!-- Banner with Name and Tacoma -->
-    <div id="banner"></div>
-    <h2>This is definitely still a work in progress!</h1>
-    <p>Please check again later!</p>
+    <!-- My Truck! -->
+    <img src="https://i.imgur.com/WUunuLu.jpg?1" alt="My 2020 Toyota Tacoma TRD Off Road" width="1385">
+        <h2>This is definitely still a work in progress!</h1>
+            <p>Please check again later!</p>
 </body>
 <!-- About Me Section -->
 <footer>
