Added test JS functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="functionality.js" defer></script>
   </head>
   <!-- Portfolio Body -->
 <body>
