--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Portfolio Body -->
   <body>
 <!-- My Truck! -->
-    <img src="https://i.imgur.com/WUunuLu.jpg?1" alt="My 2020 Toyota Tacoma TRD Off Road" width="1385">
+    <img class="mytruck" src="https://i.imgur.com/WUunuLu.jpg?1" alt="My 2020 Toyota Tacoma TRD Off Road">
     <h2>This is definitely still a work in progress!</h1>
         <p>Please check again later!</p>
 <!-- About Me Section -->
