Testing page linking

--- a/resume.html
+++ b/resume.html
@@ -9,14 +9,10 @@
     <script src="functionality.js" defer></script>
   </head>
   <nav>
-    <a href="resume.html">My Resume</a>
+    <a href="index.html">Main Page</a>
   </nav>
 <!-- Portfolio Body -->
   <body>
-<!-- My Truck! -->
-    <img class="myTruck" src="https://i.imgur.com/WUunuLu.jpg?1" alt="My 2020 Toyota Tacoma TRD Off Road">
-    <h2>This is definitely still a work in progress!</h1>
-        <p>Please check again later!</p>
 <!-- About Me Section -->
     <footer>
         <h1 class="border"></h1>
