added all pages and nav bar

--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="functionality.js" defer></script>
+    <script src="functionality.js"></script>
   </head>
+
+ <!-- Navigation Bar -->
   <nav>
-    <a href="resume.html">My Resume</a>
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="Projects.html">Projects</a>
+    <a href="Interests.html">Interests</a>
+    <a href="Contact.html">Contact</a>
   </nav>
-<!-- Portfolio Body -->
+
+ <!-- Home Page Body -->
   <body>
-<!-- My Truck! -->
-    <img class="myTruck" src="https://i.imgur.com/WUunuLu.jpg?1" alt="My 2020 Toyota Tacoma TRD Off Road">
-    <h2>This is definitely still a work in progress!</h1>
-        <p>Please check again later!</p>
-<!-- About Me Section -->
-    <footer>
-        <h1 class="border"></h1>
-        <h3>About Me</h2>
-        <p>Email me at colinhoolwerf@gmail.com</p>
-        <a href="https://www.linkedin.com/in/colinhoolwerf/">LinkedIn</a>
-    </footer>
+    <h1>This is definitely still a work in progress!</h1>
+      <p>Please check again later!</p>
   </body>
+
+<!-- Footer -->
+    <footer>
+      <h1 class="border"></h1>
+        <h3>About Me</h2>
+          <p>Email me at colinhoolwerf@gmail.com</p>
+            <a href="https://www.linkedin.com/in/colinhoolwerf/">LinkedIn</a>
+  </footer>
 </HTML>
