nav bar, footer, and basic formatting completed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
  <!-- Navigation Bar -->
- <nav>
+<nav>
   <a href="index.html">Home</a>
   <a href="resume.html">Resume</a>
   <a href="Projects.html">Projects</a>
@@ -20,15 +20,18 @@
 
 <!-- Home Page Body -->
 <body>
-  <h1>This is definitely still a work in progress!</h1>
-    <p>Please check again later!</p>
+  <div class="myname">
+    <h1>Colin Hoolwerf</h1>
+    <img id="selfie" src="https://i.imgur.com/xTqF4GX.jpg" alt="selfie of Colin Hoolwerf" width=25%>
+  </div>
 
 <!-- Footer -->
-      <footer>
-      <h1 class="border"></h1>
-          <h3>About Me</h2>
-          <p>Email me at colinhoolwerf@gmail.com</p>
-              <a href="https://www.linkedin.com/in/colinhoolwerf/">LinkedIn</a>
-      </footer>
-  </body>
+<footer>
+  <a href="mailto:colinhoolwerf@gmail.com?subject=Email From Portfolio Website">E-Mail</a>
+  <a href="https://www.linkedin.com/in/colinhoolwerf/">LinkedIn</a>
+  <a href="https://github.com/ColinH58">GitHub</a>
+  <a href="https://www.instagram.com/colinh58/">Instagram</a>
+  <a href="https://twitter.com/Inukshuk58">Twitter</a>
+</footer>
+</body>
 </HTML>
