--- a/resume.html
+++ b/resume.html
@@ -27,11 +27,11 @@
 
 <!-- Footer -->
 <footer>
-  <a href="mailto:colinhoolwerf@gmail.com?subject=Email From Portfolio Website">E-Mail</a>
-  <a href="https://www.linkedin.com/in/colinhoolwerf/">LinkedIn</a>
-  <a href="https://github.com/ColinH58">GitHub</a>
-  <a href="https://www.instagram.com/colinh58/">Instagram</a>
-  <a href="https://twitter.com/Inukshuk58">Twitter</a>
+  <a href="mailto:colinhoolwerf@gmail.com">E-Mail</a>
+  <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank">LinkedIn</a>
+  <a href="https://github.com/ColinH58" target="_blank">GitHub</a>
+  <a href="https://www.instagram.com/colinh58/" target="_blank">Instagram</a>
+  <a href="https://twitter.com/Inukshuk58" target="_blank">Twitter</a>
 </footer>
 </body>
 </HTML>
