Added first journal entry and styling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,42 @@
 
 <!-- Home Page Body -->
 <body>
-  <div class="myname">
+  <div class="MyName">
     <h1>Colin Hoolwerf</h1>
-    <img id="selfie" src="https://i.imgur.com/xTqF4GX.jpg" alt="selfie of Colin Hoolwerf" width=25%>
+    <img id="selfie" src="https://i.imgur.com/xTqF4GX.jpg" alt="selfie of Colin Hoolwerf" width=30%>
+  </div>
+
+  <!-- Coding Journal Preface -->
+  <div class="AboutSetup">
+    <h2>My Coding Journey</h2>
+      <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was really 
+      motivated! I was ready to change my career and learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the
+      more complex concepts. To help me stay focused and accountable I set a goal and kept a daily journal of my progress. My goal was to get to 100%
+      completion in the Full-Stack Developer course on Codecademy in 100 days (excluding Tuesdays which was the only night I took off every week). 
+      I’ve included that journal here!</p>
+  </div>
+  
+  <!-- Coding Journal -->
+  <div class="CodingJournal">
+    <h2>Coding Journal</h2>
+      <ul>
+        <li>Day 1: Saturday, June 5 <br>
+          Today I start, again, for the 3rd time. I reset all my progress on Codecademy, restarted my subscription, then began the Full-Stack Engineer 
+          (Pro) curriculum. After a couple of hours of lessons, I took a walk with my wife, who is also starting today. We walked for about 30 mins, we 
+          talked mostly about our goals and the future coding could enable. Working remotely, working a side hustle, Barista FIRE-ing, etc. We're both 
+          very excited, very motivated, ready to change our lives with our own efforts. I did an hour later that evening, totaling 3 hours for my first 
+          day. <br> (3 hrs - 3 hrs Total) (2% Complete - Goal 1%)</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
   </div>
 
 <!-- Footer -->
