completed Home page, for now. need to finish later

--- a/index.html
+++ b/index.html
@@ -28,34 +28,110 @@
   <!-- Coding Journal Preface -->
   <div class="AboutSetup">
     <h2>My Coding Journey</h2>
-      <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was really 
-      motivated! I was ready to change my career and learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the
-      more complex concepts. To help me stay focused and accountable I set a goal and kept a daily journal of my progress. My goal was to get to 100%
-      completion in the Full-Stack Developer course on Codecademy in 100 days (excluding Tuesdays which was the only night I took off every week). 
-      I’ve included that journal here!</p>
+      <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was really motivated! I was ready to 
+        change my career and learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the more complex concepts. To help me stay focused and 
+        accountable I set a goal and kept a daily journal of my progress. My goal was to get to 100% completion in the Full-Stack Developer course on Codecademy in 100 days 
+        (excluding Tuesdays which was the only night I took off every week).</p>
+        <p>I’ve included that journal here!</p>
   </div>
   
   <!-- Coding Journal -->
   <div class="CodingJournal">
     <h2>Coding Journal</h2>
       <ul>
-        <li>Day 1: Saturday, June 5 <br>
-          Today I start, again, for the 3rd time. I reset all my progress on Codecademy, restarted my subscription, then began the Full-Stack Engineer 
-          (Pro) curriculum. After a couple of hours of lessons, I took a walk with my wife, who is also starting today. We walked for about 30 mins, we 
-          talked mostly about our goals and the future coding could enable. Working remotely, working a side hustle, Barista FIRE-ing, etc. We're both 
-          very excited, very motivated, ready to change our lives with our own efforts. I did an hour later that evening, totaling 3 hours for my first 
-          day. <br> (3 hrs - 3 hrs Total) (2% Complete - Goal 1%)</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li> <u>Day 1: Saturday, June 5</u> <br>
+          Today I start, again, for the 3rd time. I reset all my progress on Codecademy, restarted my subscription, then began the Full-Stack Engineer (Pro) curriculum. After a couple 
+          of hours of lessons, I took a walk with my wife, who is also starting today. We walked for about 30 mins, we talked mostly about our goals and the future coding could enable. 
+          Working remotely, working a side hustle, Barista FIRE-ing, etc. We're both very excited, very motivated, ready to change our lives with our own efforts. I did an hour later 
+          that evening, totaling 3 hours for my first day. <br> 
+          <em>(3 hrs - 3 hrs Total) (2% Complete - Goal 1%)</em> </li>
+        <li> <u>Day 2: Sunday, June 6</u> <br>
+          I started today with two projects, one was a Rock, Paper, Scissors project. Both projects took an hour combined to complete. After a short break, I completed another hour, 
+          then took an extended break. I felt motivated to organize my thoughts and goals so I put my goals and plan into writing before finishing the day with 30 more minutes of 
+          Codecademy. I also wound down the last 30 minutes of the day with the introduction and first chapter from the book HTML & CSS Design and Build Websites by Jon Duckett. <br>
+          <em>(3 hrs - 6 hrs Total) (4% Complete - Goal 2%)</em> </li>
+        <li> <u>Day 3: Monday, June 7</u> <br>
+          I managed to get about two hours of Codecademy lessons during the workday, mostly practice assignments. After dinner, I helped my wife through some of her lessons for about 
+          half an hour then completed another hour of my lessons. Later I read Chapter 4 of JavaScript and JQuery by Jon Duckett as instructed by Codecademy before bed. <br>
+          <em>(3.5 hrs - 9.5 hrs Total) (5% Complete - Goal 3%)</em> </li>
+        <li> <u>Day OFF: Tuesday, June 8</u> <br> Tuesdays are Off Days. However, I chose to read Chapter 3 of JavaScript and JQuery by Jon Duckett and watch a 2hr lecture on Youtube 
+          from the Codecademy curriculum. Both the lecture and chapter took 2hrs, meaning I managed 4 total hours on a day I planned to do nothing. <br> 
+          <em>(4 hrs - 13.5 hrs Total)</em> </li>
+        <li> <u>Day 4: Wednesday, June 9</u> <br> I was feeling anxious about my progress (I felt like I was already slowing down despite being ahead of my goal), so I scheduled 3.5hrs 
+          and more or less hit that target. I did have to help my wife troubleshoot Codecademy not staying connected for her as well as helping her with a few lessons, both of which 
+          took some time. After the lessons, I read Chapter 2 of JavaScript and JQuery by Jon Duckett in bed. <br> <em>(3.5 hrs - 17 hrs Total) (7% Complete - Goal 4%)</em> </li>
+        <li> <u>Day 5: Thursday, June 10</u> <br> I blocked out another long night. I gave myself 5 hours but also gave myself longer breaks (as I was struggling with the lessons 
+          towards the end of the previous night). No bedtime reading this time, I instead did practice quizzes on Codecademy Go, the mobile companion app. <br> 
+          <em>(3.5 hrs - 20.5 hrs Total) (9% Complete - Goal 5%)</em> </li>
+        <li> <u>Day 6: Friday, June 11</u> <br> I watched two videos about higher-order functions to try to shore up my understanding of them. They didn't super help but they didn't 
+          hurt either. I spent most of my evening setting up my notes for the rest of the journey so that all I had to do was update each preset day, making this part of the process 
+          much easier. I also read the sections on functions and objects in JavaScript and JQuery by Jon Duckett in bed along with a couple of Codecademy Go quizzes. <br> 
+          <em>(1.5 hrs - 22 hrs Total) (9% Complete - Goal 6%)</em> </li>
+        <li> <u>Day 7: Saturday, June 12</u> <br> I spent about 2.5 hours total today working through Codecademy, working mostly on understanding how to read and fix error messages. 
+          After the first hour and a half, I took an extended break then came back to do another hour of coding challenges before bed. <br> 
+          <em>(2.5 hrs - 24.5 hrs Total) (10% Complete - Goal 7%)</em> </li>
+        <li> <u>Day 8: Sunday, June 13</u> <br> I asked my web dev friend for help with understanding how to read and write higher-order functions then repeated a few lessons and 
+          practices on CC. I spent around 4 hours total working on coding but only about an hour on new lessons. After that hour or so of new lessons, I decided to catch up on the 
+          reading assignments, which took about an hour as well <br> <em>(5 hrs - 29.5 hrs Total) (11% Complete - Goal 8%)</em> </li>
+        <li> <u>Day OFF: Monday, June 14</u> <br> We did date night early this week. I made very little progress and enjoyed the night off. <br> 
+          <em>(5 hrs - 29.5 hrs Total) (11% Complete - Goal 8%)</em> </li>
+        <li> <u>Day 9: Tuesday, June 15</u> <br> Tuesdays are off days normally but this week I decided to take Monday night off instead. When I logged in today I had lost 3%! Back 
+          down to 8% Completed! Codecademy had fixed a bug that was counting progress incorrectly. I was determined to stay ahead of my goal so I put in 5 hours, breaking only to 
+          shower then getting right back to it. <br> <em>(4.5 hrs - 34 hrs Total) (11% Complete - Goal 9%)</em> </li>
+        <li> <u>Day 10: Wednesday, June 16</u> <br> Tonight was all about getting comfortable with creating repositories and committing code to GitHub. Towards the end of the evening, 
+          I was given a random message generator project that helped reinforce the use of GitHub. I spent about 3.5 hours in total. I re-read the introduction and first chapter of the 
+          HTML & CSS Design and Build Websites by Jon Duckett again, as directed by Codecademy to prepare for tomorrow's lessons. <br> 
+          <em>(3.5 hrs - 37.5 hrs Total) (13% Complete - Goal 10%)</em> </li>
+        <li> <u>Day 11: Thursday, June 17</u> <br> I had every intention of working through courses today but legitimately ran out of time before I had the chance. Immediately after 
+          work, I had an appointment at a dealership that lasted well into the evening. By the time I got home, it was already later than my usual bedtime. <br> 
+          <em>(0 hrs - 37.5 hrs Total) (13% Complete - Goal 11%)</em> </li>
+        <li> <u>Day 12: Friday, June 18</u> <br> I got a bit of a late start today. I started with an hour, got through a lesson then stopped for dinner. After an extended break I 
+          only had enough time to do another half an hour before bed. <br> <em>(1 hrs - 38.5 hrs Total) (13% Complete - Goal 12%)</em> </li>
+        <li> <u>Day 14: Sunday, June 20</u> <br> Another day, another set of lessons. I started about mid-afternoon, did an hour, then took a shower break. I had a really hard time 
+          concentrating, I spent about two more hours on lessons but probably only got about an hour of value out of it. So I called it early today. <br> 
+          <em>(2 hrs - 42 hrs Total) (15% Complete - Goal 14%)</em> </li>
+        <li> <u>Day OFF: Monday, June 21</u> <br> We did date night early again this week. I made very little progress and enjoyed the night off. <br> 
+          <em>(2 hrs - 42 hrs Total) (15% Complete - Goal 14%)</em> </li>
+        <li> <u>Day 15: Tuesday, June 22</u> <br> I started at 5 pm, went until 6:30 pm then took an extended break. I sat back down at 8 pm and did lessons until 9 pm. I finished up 
+          the day with 2.5 more hours in the books! <br> <em>(2.5 hrs - 44.5 hrs Total) (16% Complete - Goal 15%)</em> </li>
+        <li> <u>Day 16: Wednesday, June 23</u> <br> Today was my first day back in the office so my free time will start dropping, but I will do my best to not let that slow me down! 
+          Having said that, I started at 7 pm and went until 8 pm. After a 30 min break, I did one more hour. <br> <em>(2 hrs - 46.5 hrs Total) (18% Complete - Goal 16%)</em> </li>
+        <li> <u>Day 17: Thursday, June 24</u> <br> Due to a family event, I started later than I wanted, but still made progress! I started at 730 pm and went for an hour. I was pretty 
+          tired so I read the latest assigned chapter in HTML & CSS Design and Build Websites by Jon Duckett and went to bed. <br> 
+          <em>(1.5 hrs - 48 hrs Total) (19% Complete - Goal 17%)</em> </li>
+        <li> <u>Day 18: Friday, June 25</u> <br> Another late start, returning to the office is killing me! I started at 8 pm and went until 10 pm! I spent about half of that time 
+          trying to get my portfolio page live. I was having issues getting my progress updated on GitHub, after a few google searches I got it all set up and ready to go! However, 
+          this means I didn’t make a lot of progress in Codecademy. <br> <em>(1 hrs - 49 hrs Total) (19% Complete - Goal 18%)</em> </li>
+        <li> <u>Day 19: Saturday, June 26</u> <br> Started at 6 pm today, went until 7 pm then stopped for a late dinner. I started back up again at 9:30 pm. I completed a project and 
+          a series of CSS coding challenges. I worked until bedtime at 10:30 pm. <br> <em>(2 hrs - 51 hrs Total) (20% Complete - Goal 19%)</em> </li>
+        <li> <u>Day 20: Sunday, June 27</u> <br> Before starting Codecademy courses today I spent some time working on my portfolio web page ahead of the assignment. I was getting 
+          excited and knew I was really just some boilerplate and a git push away from having something on the internet! While I was working on setting up my webpage I also watched 
+          HTML and CSS Lecture 0 CS50 on YouTube, I had heard good things and wanted to see for myself. I started doing CC lessons at 3:30 pm and went for an hour. I went back to 
+          tinkering with my personal website for a bit before taking an extended break. I logged back into Codecademy again at 8 pm and went for another hour. <br> 
+          <em>(2 hrs - 53 hrs Total) (22% Complete - Goal 20%)</em> </li>
+        <li> <u>Day 21: Monday, June 28</u> <br> Back to the office, this is just life now (again)! I watched another two CS50 lectures during downtime while at the office. Later that 
+          evening I started coding lessons at 7:30 pm and went for an hour. I took a 30 min break and got back to it at 9 pm, for another hour! <br> 
+          <em>(2 hrs - 55 hrs Total) (23% Complete - Goal 21%)</em> </li>
+        <li> <u>Day OFF: Tuesday, June 29</u> <br> Tuesdays are Off Days. <br> <em>(2 hrs - 55 hrs Total) (23% Complete - Goal 21%)</em> </li>
+        <li> <u>Day 22: Wednesday, June 30</u> <br> Another 7 pm start, another hour in the books! I took a shower as a break and sat back down for another hour. I was a little behind 
+          on the reading assignments so I also spent the last half hour of my day catching up (JavaScript and JQuery by Jon Duckett), totaling 2.5 hrs for the day. <br> 
+          <em>(3 hrs - 57.5 hrs Total) (25% Complete - Goal 22%)</em> </li>
+        <li> <u>Day 23: Thursday, July 1</u> <br> Another day, another set of lessons! I sat down at 7:30 pm today and went for an hour, but I noticed I wasn’t fully engaging with the 
+          lessons. I was actually really struggling to stay focused, so I called it early. <br> 
+          <em>(1 hrs - 58.5 hrs Total) (25% Complete - Goal 23%)</em> </li>
+        <li> <u>Day 24: Friday, July 2</u> <br> I had to work a little later today, I also needed to grab stationery specifically for wireframing, so I got a late start. I sat down at 
+          8:30 pm and did CC lessons for an hour, stopping to shower. At 10:00 pm I sat back down to hammer out 30 more minutes of lessons, then I went to bed! <br> 
+          <em>(1.5 hrs - 60 hrs Total) (27% Complete - Goal 24%)</em> </li>
+        <li> <u>Day 25: Saturday, July 3</u> <br> Long weekend! Time to get those CC gains! I sat down today at 7:30 pm and went for an hour. After a 30 min break I got back to it for 
+          another hour! 9 pm to 10 pm, then I called it for the day. <br> <em>(2 hrs - 62 hrs Total) (29% Complete - Goal 25%)</em> </li>
+        <li> <u>Day 26: Sunday, July 4</u> <br> Time to celebrate the 4th of July by doing Codecademy lessons! I only blocked out an hour for lessons today. I knew an hour would put me 
+          at the portfolio website project and I wanted to dedicate, more or less, an entire day to start it. Luckily for me, I have tomorrow off, that’s when I’ll start! <br> 
+          <em>(1 hrs - 63 hrs Total) (30% Complete - Goal 26%)</em> </li>
+        <li> <u>Day 27: Monday, July 5 (ONE MONTH!)</u> <br> Portfolio website day! Since I have the day off I figured I would spend it working on my portfolio page! No Codecademy progress 
+          to report today but I was definitely busy most of the day! <br> <em>(0 hrs - 63 hrs Total) (30% Complete - Goal 27%)</em> </li>
+        <li> MORE TO COME! STAY TUNED! </li>
       </ul>
+      <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
   </div>
 
 <!-- Footer -->
