--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="MyName">
     <h1>Colin Hoolwerf</h1>
-    <img id="selfie" src="https://i.imgur.com/xTqF4GX.jpg" alt="selfie of Colin Hoolwerf" width=30%>
+    <img id="selfie" src="https://i.imgur.com/xTqF4GX.jpg" alt="selfie of Colin Hoolwerf">
   </div>
 
   <!-- Coding Journal Preface -->
