setup other pages

--- a/Contact.html
+++ b/Contact.html
@@ -20,9 +20,8 @@
 
 <!-- Home Page Body -->
 <body>
-  <div class="myname">
-    <h1>Colin Hoolwerf</h1>
-    <img id="selfie" src="https://i.imgur.com/xTqF4GX.jpg" alt="selfie of Colin Hoolwerf" width=25%>
+  <div class="Contact">
+    <h1>Coming Soon!</h1>
   </div>
 
 <!-- Footer -->
