Added Resume Section

--- a/resume.html
+++ b/resume.html
@@ -18,10 +18,55 @@
   <a href="Contact.html">Contact</a>
 </nav>
 
-<!-- Home Page Body -->
+<!-- Resume Page Body -->
 <body>
   <div class="Resume">
-    <h1>Coming Soon!</h1>
+    <h1><u>About</u></h1>
+        <p>I am a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
+            payroll, facilities and general office support. <br> I am a graduate of East Field College in Mesquite, TX. I have an Associate's of Science with a focus in Biology.
+        <br> I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</p>
+    </div>
+    <div>
+        <h1><u>Experience</u></h1>
+            <h2>Workplace Coordinator</h2>
+                <h3>Autodesk, Plano TX</h3>
+                    <h4>May 2016 - Present</h4>
+                        <ul>
+                            <li>Created proposals for office renovations and equipment updates with estimated costs from local vendors and contractors.</li>
+                            <li>Received and fulfilled facilities requests including requests for new furniture, conferencing equipment, kitchen equipment, general supplies and 
+                                repairs.</li>
+                            <li>Received and processed mail and parcels including managing outgoing mail and shipping equipment both domestically and internationally.</li>
+                            <li>Worked with building management to ensure changes were landlord approved and that contractors had required paperwork and security clearances.</li>
+                            <li>Assisted with event planning and managed the local conference room calendars. I was also responsible for tracking site and reception event metrics.</li>
+                            <li>Collaborated with our IT department to update and refresh server room equipment, including UPS and network switch upgrades.</li>
+                            <li>Worked side by side with our security teams to create evacuation plans, troubleshoot security camera issues, and create a safe work environment.</li>
+                            <li>Due to the size of the site I was also the primary site contact, after hours point of contact, receptionist and IT contact.</li>
+                        </ul>
+            <h2>Data Entry Coordinator</h2>
+                <h3>Employbridge, Irving TX</h3>
+                    <h4>July 2015 - April 2016</h4>
+                        <ul>
+                            <li>Quickly and accurately entered payroll data from submitted time cards and spreadsheets.</li>
+                            <li>Coordinated with other payroll and billing staff to ensure proper processing.</li>
+                            <li>Trained new employees and helped develop improvements to the process.</li>
+                        </ul>
+            <h2>Sheetmetal Technician Assistant</h2>
+                <h3>Trotter & Morton, Calgary AB</h3>
+                    <h4>October 2013 - April 2015</h4>
+                        <ul>
+                            <li>Organized construction material and equipment, general housekeeping, assisted journeymen as needed and kept up with safety paper work.</li>
+                            <li>Fabricated, installed and sealed duct systems for commercial and industrial buildings.</li>
+                            <li>Operated scissor lifts, boom lifts, and power tools while closing following strict safety policies.</li>
+                        </ul>
+            <h2>Intern</h2>
+                <h3>Milliman, Dallas TX</h3>
+                    <h4>June 2008 - August 2011</h4>
+                        <ul>
+                            <li>General clerical office support duties. Entered mass amounts of data, created letters to pension participants and mailed them. Created copies and 
+                                sent faxes.</li>
+                            <li>Call center duties including taking and making calls and recording sensitive data.</li>
+                            <li>Reconciled data files to payments posted by the system for numerous clients and corrected discrepancies.</li>
+                        </ul>
   </div>
 
 <!-- Footer -->
