--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
   <a href="Contact.html">Contact</a>
 </nav>
 
-<!-- Home Page Body -->
+<!-- Contact Page Body -->
 <body>
   <div class="Contact">
     <h1>Coming Soon!</h1>
