--- a/Interests.html
+++ b/Interests.html
@@ -18,7 +18,7 @@
   <a href="Contact.html">Contact</a>
 </nav>
 
-<!-- Home Page Body -->
+<!-- Interests Page Body -->
 <body>
   <div class="Interests">
     <h1>Coming Soon!</h1>
