--- a/Projects.html
+++ b/Projects.html
@@ -18,7 +18,7 @@
   <a href="Contact.html">Contact</a>
 </nav>
 
-<!-- Home Page Body -->
+<!-- Projects Page Body -->
 <body>
   <div class="Projects">
     <h1>Coming Soon!</h1>
