--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,12 @@
 <body>
   <div class="Resume">
     <h1><u>About</u></h1>
-        <p>I am a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
-            payroll, facilities and general office support. <br> I am a graduate of East Field College in Mesquite, TX. I have an Associate's of Science with a focus in Biology.
-        <br> I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</p>
+        <ul>
+            <li>I am a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
+            payroll, facilities and general office support.</li>
+            <li>I am a graduate of East Field College in Mesquite, TX. I have an Associate's of Science with a focus in Biology.</li>
+            <li>I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</li>
+        </ul>
     </div>
     <div>
         <h1><u>Experience</u></h1>
