Changed footer from text to icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="functionality.js"></script>
   </head>
 
@@ -136,11 +137,11 @@
 
 <!-- Footer -->
 <footer>
-  <a href="mailto:colinhoolwerf@gmail.com">E-Mail</a>
-  <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank">LinkedIn</a>
-  <a href="https://github.com/ColinH58" target="_blank">GitHub</a>
-  <a href="https://www.instagram.com/colinh58/" target="_blank">Instagram</a>
-  <a href="https://twitter.com/Inukshuk58" target="_blank">Twitter</a>
+  <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google"></a>
+  <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin"></a>
+  <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github"></a> 
+  <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram"></a>
+  <a href="https://twitter.com/Inukshuk58" target="_blank" class="fa fa-twitter"></a>
 </footer>
 </body>
 </HTML>
