fixed resume experience section formatting. both web and mobile.

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
             <li>I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</li>
         </ul>
     </div>
-    <div>
+    <div class="Experience">
         <h1><u>Experience</u></h1>
             <h2>Workplace Coordinator</h2>
                 <h3>Autodesk, Plano TX</h3>
