--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,8 @@
     </div>
     <div class="Experience">
         <h1><u>Experience</u></h1>
-            <h2>Workplace Coordinator</h2>
+        <ol>
+            <li><h2>Workplace Coordinator</h2></li>
                 <h3>Autodesk, Plano TX</h3>
                     <h4>May 2016 - Present</h4>
                         <ul>
@@ -46,7 +47,7 @@
                             <li>Worked side by side with our security teams to create evacuation plans, troubleshoot security camera issues, and create a safe work environment.</li>
                             <li>Due to the size of the site I was also the primary site contact, after hours point of contact, receptionist and IT contact.</li>
                         </ul>
-            <h2>Data Entry Coordinator</h2>
+            <li><h2>Data Entry Coordinator</h2></li>
                 <h3>Employbridge, Irving TX</h3>
                     <h4>July 2015 - April 2016</h4>
                         <ul>
@@ -54,7 +55,7 @@
                             <li>Coordinated with other payroll and billing staff to ensure proper processing.</li>
                             <li>Trained new employees and helped develop improvements to the process.</li>
                         </ul>
-            <h2>Sheetmetal Technician Assistant</h2>
+            <li><h2>Sheetmetal Technician Assistant</h2></li>
                 <h3>Trotter & Morton, Calgary AB</h3>
                     <h4>October 2013 - April 2015</h4>
                         <ul>
@@ -62,7 +63,7 @@
                             <li>Fabricated, installed and sealed duct systems for commercial and industrial buildings.</li>
                             <li>Operated scissor lifts, boom lifts, and power tools while closing following strict safety policies.</li>
                         </ul>
-            <h2>Intern</h2>
+            <li><h2>Intern</h2></li>
                 <h3>Milliman, Dallas TX</h3>
                     <h4>June 2008 - August 2011</h4>
                         <ul>
@@ -71,6 +72,7 @@
                             <li>Call center duties including taking and making calls and recording sensitive data.</li>
                             <li>Reconciled data files to payments posted by the system for numerous clients and corrected discrepancies.</li>
                         </ul>
+        </ol>
   </div>
 
 <!-- Footer -->
