updated Resume About section

--- a/resume.html
+++ b/resume.html
@@ -26,6 +26,7 @@
         <ul>
             <li>I am a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
             payroll, facilities and general office support.</li>
+            <li>I am currently working through Codecademy's Full-Stack Developer PRO course and expect to be done by October 2021.</li>
             <li>I am a graduate of East Field College in Mesquite, TX. I have an Associate's of Science with a focus in Biology.</li>
             <li>I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</li>
         </ul>
