--- a/Contact.html
+++ b/Contact.html
@@ -25,15 +25,15 @@
     <div class="ContactForm">
         <form action="ContactFormSubmitter.php">
           <label for="inputname">Name</label>
-          <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name">
+          <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
           <label for="inputcompany">Company</label>
-          <input type="text" id="inputcompany" name="inputcompany" placeholder="Enter Your Company"> 
+          <input type="text" id="inputcompany" name="inputcompany" placeholder="Enter Your Company" required> 
           <label for="inputemail">Email Address</label>
-          <input type="text" id="inputemail" name="inputemail" placeholder="Enter Your Email Address">
+          <input type="text" id="inputemail" name="inputemail" placeholder="Enter Your Email Address" required>
           <label for="subject">Subject</label>
-          <input type="text" id="subject" name="subject" placeholder="Subject Line">
+          <input type="text" id="subject" name="subject" placeholder="Subject Line" required>
           <label for="message">Message</label>
-          <textarea id="message" name="message" placeholder="Write your message..." style="height:200px"></textarea>
+          <textarea id="message" name="message" placeholder="Write your message..." style="height:200px" required></textarea>
           <input type="submit" value="Submit">
         </form>
       </div>   
