--- a/Projects.html
+++ b/Projects.html
@@ -7,7 +7,7 @@
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="functionality.js"></script>
+    <!-- <script src="functionality.js"></script> -->
   </head>
 
  <!-- Navigation Bar -->
