I hope this works? added PHP to content form

--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
 <body>
   <div class="Contact">
     <div class="ContactForm">
-        <form action="ContactFormSubmitter.php">
+        <form action="ContactFormSubmitter.php" method="POST">
           <label for="inputname">Name</label>
           <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
           <label for="inputcompany">Company</label>
