--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <em>(3.5 hrs - 9.5 hrs Total) (5% Complete - Goal 3%)</em> </li>
         <li> <u>Day OFF: Tuesday, June 8</u> <br> Tuesdays are Off Days. However, I chose to read Chapter 3 of JavaScript and JQuery by Jon Duckett and watch a 2hr lecture on Youtube 
           from the Codecademy curriculum. Both the lecture and chapter took 2hrs, meaning I managed 4 total hours on a day I planned to do nothing. <br> 
-          <em>(4 hrs - 13.5 hrs Total)</em> </li>
+          <em>(4 hrs - 13.5 hrs Total) (5% Complete - Goal 3%)</em> </li>
         <li> <u>Day 4: Wednesday, June 9</u> <br> I was feeling anxious about my progress (I felt like I was already slowing down despite being ahead of my goal), so I scheduled 3.5hrs 
           and more or less hit that target. I did have to help my wife troubleshoot Codecademy not staying connected for her as well as helping her with a few lessons, both of which 
           took some time. After the lessons, I read Chapter 2 of JavaScript and JQuery by Jon Duckett in bed. <br> <em>(3.5 hrs - 17 hrs Total) (7% Complete - Goal 4%)</em> </li>
@@ -75,7 +75,7 @@
           practices on CC. I spent around 4 hours total working on coding but only about an hour on new lessons. After that hour or so of new lessons, I decided to catch up on the 
           reading assignments, which took about an hour as well <br> <em>(5 hrs - 29.5 hrs Total) (11% Complete - Goal 8%)</em> </li>
         <li> <u>Day OFF: Monday, June 14</u> <br> We did date night early this week. I made very little progress and enjoyed the night off. <br> 
-          <em>(5 hrs - 29.5 hrs Total) (11% Complete - Goal 8%)</em> </li>
+          <em>(29.5 hrs Total) (11% Complete - Goal 8%)</em> </li>
         <li> <u>Day 9: Tuesday, June 15</u> <br> Tuesdays are off days normally but this week I decided to take Monday night off instead. When I logged in today I had lost 3%! Back 
           down to 8% Completed! Codecademy had fixed a bug that was counting progress incorrectly. I was determined to stay ahead of my goal so I put in 5 hours, breaking only to 
           shower then getting right back to it. <br> <em>(4.5 hrs - 34 hrs Total) (11% Complete - Goal 9%)</em> </li>
@@ -92,7 +92,7 @@
           concentrating, I spent about two more hours on lessons but probably only got about an hour of value out of it. So I called it early today. <br> 
           <em>(2 hrs - 42 hrs Total) (15% Complete - Goal 14%)</em> </li>
         <li> <u>Day OFF: Monday, June 21</u> <br> We did date night early again this week. I made very little progress and enjoyed the night off. <br> 
-          <em>(2 hrs - 42 hrs Total) (15% Complete - Goal 14%)</em> </li>
+          <em>(42 hrs Total) (15% Complete - Goal 14%)</em> </li>
         <li> <u>Day 15: Tuesday, June 22</u> <br> I started at 5 pm, went until 6:30 pm then took an extended break. I sat back down at 8 pm and did lessons until 9 pm. I finished up 
           the day with 2.5 more hours in the books! <br> <em>(2.5 hrs - 44.5 hrs Total) (16% Complete - Goal 15%)</em> </li>
         <li> <u>Day 16: Wednesday, June 23</u> <br> Today was my first day back in the office so my free time will start dropping, but I will do my best to not let that slow me down! 
@@ -113,7 +113,7 @@
         <li> <u>Day 21: Monday, June 28</u> <br> Back to the office, this is just life now (again)! I watched another two CS50 lectures during downtime while at the office. Later that 
           evening I started coding lessons at 7:30 pm and went for an hour. I took a 30 min break and got back to it at 9 pm, for another hour! <br> 
           <em>(2 hrs - 55 hrs Total) (23% Complete - Goal 21%)</em> </li>
-        <li> <u>Day OFF: Tuesday, June 29</u> <br> Tuesdays are Off Days. <br> <em>(2 hrs - 55 hrs Total) (23% Complete - Goal 21%)</em> </li>
+        <li> <u>Day OFF: Tuesday, June 29</u> <br> Tuesdays are Off Days. <br> <em>(55 hrs Total) (23% Complete - Goal 21%)</em> </li>
         <li> <u>Day 22: Wednesday, June 30</u> <br> Another 7 pm start, another hour in the books! I took a shower as a break and sat back down for another hour. I was a little behind 
           on the reading assignments so I also spent the last half hour of my day catching up (JavaScript and JQuery by Jon Duckett), totaling 2.5 hrs for the day. <br> 
           <em>(3 hrs - 57.5 hrs Total) (25% Complete - Goal 22%)</em> </li>
@@ -130,6 +130,8 @@
           <em>(1 hrs - 63 hrs Total) (30% Complete - Goal 26%)</em> </li>
         <li> <u>Day 27: Monday, July 5 (ONE MONTH!)</u> <br> Portfolio website day! Since I have the day off I figured I would spend it working on my portfolio page! No Codecademy progress 
           to report today but I was definitely busy most of the day! <br> <em>(0 hrs - 63 hrs Total) (30% Complete - Goal 27%)</em> </li>
+          <li> <u>Day OFF: Tuesday, July 6</u> <br> Tuesdays are Off Days. <br> <em>(63 hrs Total) (30% Complete - Goal 27%)</em> </li>
+
         <li> MORE TO COME! STAY TUNED! </li>
       </ul>
       <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
