--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           
         <li> <u>Day OFF: Tuesday, July 6</u> <br> Tuesdays are Off Days. <br> <em>(63 hrs Total) (30% Complete - Goal 27%)</em> </li>
         
-        <li> <u>Day 28: Wednesday, July 7</u> <br> Back to it! I felt like I had taken an extended break but I only took one day to work on my website and one actual day off. Either way, 
+        <li> <u>Day 28: Wednesday, July 7</u> <br> I felt like I had taken an extended break but I only took one day to work on my website and one actual day off. Either way, 
           I was ready to get back to it! I started at 6:30 pm and went for an hour then took a shower break. I sat back down at 8:00 pm and went for another hour and a half. I really 
           struggled to keep focused, I spent a lot of time reading and rereading the lessons. I knew I was making great progress and had built up a ton of momentum and I really wanted to 
           keep it going, so I powered through! <br> <em>(2.5 hrs - 65.5 hrs Total) (32% Complete - Goal 28%)</em> </li>
