final correction for daily journal

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         
         <li> <u>Day 28: Wednesday, July 7</u> <br> I felt like I had taken an extended break but I only took one day to work on my website and one actual day off. Either way, 
           I was ready to get back to it! I started at 6:30 pm and went for an hour then took a shower break. I sat back down at 8:00 pm and went for another hour and a half. I really 
-          struggled to keep focused, I spent a lot of time reading and rereading the lessons. I knew I was making great progress and had built up a ton of momentum and I really wanted to 
+          struggled to stay focused, I spent a lot of time reading and rereading the lessons. I knew I was making great progress and had built up a ton of momentum and I really wanted to 
           keep it going, so I powered through! <br> <em>(2.5 hrs - 65.5 hrs Total) (32% Complete - Goal 28%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
