--- a/resume.html
+++ b/resume.html
@@ -11,13 +11,13 @@
   </head>
 
  <!-- Navigation Bar -->
-<nav>
-  <a href="index.html">Home</a>
-  <a href="resume.html">Resume</a>
-  <a href="Projects.html">Projects</a>
-  <a href="Interests.html">Interests</a>
-  <a href="Contact.html">Contact</a>
-</nav>
+ <nav>
+    <a href="index.html" title="Home Page">Home</a>
+    <a href="resume.html" title="Resume">Resume</a>
+    <a href="Projects.html" title="Projects">Projects</a>
+    <a href="Interests.html" title="Interests">Interests</a>
+    <a href="Contact.html" title="Contacts">Contact</a>
+  </nav>
 
 <!-- Resume Page Body -->
 <body>
@@ -78,11 +78,11 @@
 
 <!-- Footer -->
 <footer>
-    <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google"></a>
-    <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin"></a>
-    <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github"></a> 
-    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram"></a>
-    <a href="https://twitter.com/Inukshuk58" target="_blank" class="fa fa-twitter"></a>
-</footer>
-</body>
-</HTML>
+    <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
+    <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
+    <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
+    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
+    <a href="https://twitter.com/Inukshuk58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+  </footer>
+  </body>
+  </HTML>
