--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           struggled to stay focused, I spent a lot of time reading and rereading the lessons. I knew I was making great progress and had built up a ton of momentum and I really wanted to 
           keep it going, so I powered through! <br> <em>(2.5 hrs - 65.5 hrs Total) (32% Complete - Goal 28%)</em> </li>
 
-        <li> <u>Day 29: Thursday, July 8</u> <br> Let get it! Sat down at 7 pm, went for an hour. I took a walk to the convenience store near my apartment and got ready for another hour. 
+        <li> <u>Day 29: Thursday, July 8</u> <br> Let's get it! Sat down at 7 pm, went for an hour. I took a walk to the convenience store near my apartment and got ready for another hour. 
           I sat back down, snacks in hand, at 8:30 pm and went for an hour and a half! <br> <em>(2.5 hrs - 68 hrs Total) (35% Complete - Goal 29%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
