--- a/index.html
+++ b/index.html
@@ -170,9 +170,13 @@
         <li> <u>Day 29: Thursday, July 8</u> <br> Let's get it! Sat down at 7 pm, went for an hour. I took a walk to the convenience store near my apartment and got ready for another hour. 
           I sat back down, snacks in hand, at 8:30 pm and went for an hour and a half! <br> <em>(2.5 hrs - 68 hrs Total) (35% Complete - Goal 29%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 30: Friday, July 9</u> <br> I sat down a little later than usual, kinda tired but ready to learn! I started at 7:30 pm and went for an hour. After taking a break I was 
+          feeling really tired, work was particularly draining today (getting my office ready to reopen, post-pandemic!) so I called it early. <br> 
+          <em>(1 hrs - 69 hrs Total) (36% Complete - Goal 30%)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <li> <u>Day 31: Saturday, July 10</u> <br> I had an appointment early so I started a bit later than I was hoping to. Today I started at noon and went for an hour. After which I took 
+          a short break, and got back to it at 1:30 pm for another hour. I had another appointment in the mid~late afternoon so I stopped there for the day. <br> 
+          <em>(2 hrs - 71 hrs Total) (37% Complete - Goal 31%)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
