--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
 <body>
   <div class="Contact">
     <div class="ContactForm">
-        <form action="https://colinh58.github.io/Portfolio/ContactFormSubmitter.php" method="POST">
+        <form action="mailto:colinhoolwerf@gmail.com" method="POST" enctype="multipart/form-data" name="emailform">
           <label for="inputname">Name</label>
           <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
           <label for="inputcompany">Company</label>
